fix(styles): Fix favicon margin so shadows doesn't get cutoff

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -10,6 +10,7 @@ $responsive-card__margin-y: $margin__card;
   box-shadow: $shadow__favicon;
   flex-grow: 0;
   flex-shrink: 0;
+  margin: $margin__favicon;
   overflow: hidden;
 
   span {
